--- a/src/app/view/shared/outgoing-verweise-per-manuscript/outgoing-verweise-list/outgoing-verweise-list.component.html
+++ b/src/app/view/shared/outgoing-verweise-per-manuscript/outgoing-verweise-list/outgoing-verweise-list.component.html
@@ -14,8 +14,8 @@
                 </span>
                 <span>{{t.title}}</span>
                 <span *ngIf="t.title && t.incipit">
-                  <span>, Incipit </span>
-                  <span class="text-title-incipit">‘{{t.incipit}}’</span>
+                  <span class="text-title-incipit"> {{t.incipit}}</span>
+                  <span *ngIf="t.additionalSource"> {{t.additionalSource}}</span>
                   <span *ngIf="t.textRange"> ({{t.textRange}})</span>
                 </span>
             </h4>
