--- a/src/app/view/shared/verweis-link-icon-component/verweis-link-icon-component.component.scss
+++ b/src/app/view/shared/verweis-link-icon-component/verweis-link-icon-component.component.scss
@@ -10,3 +10,10 @@
   flex-direction: row;
   justify-content: flex-end;
 }
+
+.link-icon-container-embedded {
+  position: relative;
+  display: inline-block;
+  background-color: unset;
+  justify-content: flex-end;
+}
