--- a/src/app/view/pages/page-erlaeuterungen/erlaeuterungen.component.html
+++ b/src/app/view/pages/page-erlaeuterungen/erlaeuterungen.component.html
@@ -8,7 +8,7 @@
 
   <h3 class="subtitle margin-top">Erhaltene Handschriften:</h3>
   <p>Auf der linken Seite stehen Angaben zu den bisher bekannten erhaltenen Handschriften der Gossembrot-Bibliothek: Im Menü ‚Manuskriptauswahl‘ können die einzelnen Handschriften angezeigt werden.</p>
-  <p>Unterhalb der Manuskriptauswahl steht eine kurze kodikologische Beschreibung der Handschrift (Beschreibstoff, Grösse, Entstehungszeitraum, Lagenstruktur).</p>
+  <p>Unterhalb der Manuskriptauswahl steht eine kurze kodikologische Beschreibung der Handschrift (Beschreibstoff, Gröẞe, Entstehungszeitraum, Lagenstruktur).</p>
   <p>Anschließend sind alle in der ausgewählten Handschrift enthaltenen Verweise aufgeführt. Aufgeführt werden jeweils Blatt-Angabe, Wortlaut sowie die Zielstelle der Verweise auf erhaltene und verschollene Textträger.</p>
   <p>Verweise auf Stellen innerhalb der Handschrift sind durch die Angabe ‚Interner Verweis‘ eingeleitet. Durch Klick auf den Verweis wird im danebenstehenden Digitalfaksimile das entsprechende geöffnete Doppelblatt aufgerufen. Nach Anklicken eines Verweises, stehen die folgenden Optionen zur Verfügung: Detailansicht (Quelle, Verweistext, Ziel); Weiterleitung zur Verweis-Synopse; Öffnen der Zielhandschrift.</p>
   <p>Auf der rechten Seite finden sich Angaben zu dem aktuell angezeigten Abschnitt der Handschrift:</p>
@@ -18,7 +18,7 @@
   <p>In den Digitalfaksimiles kann über das Anklicken der eingeblendeten Pfeile oder über die Bedienung der Pfeiltasten (links bzw. rechts) vorwärts und rückwärts geblättert werden.</p>
 
   <h3 class="subtitle margin-top">Rekonstruierte Textträger:</h3>
-  <p>Hier stehen drei Kategorien zur Auswahl: Handschriften aus Gossembrots Bibliothek, Handschriften ausserhalb Gossembrots Bibliothek und Drucke aus Gossembrots Bibliothek.</p>
+  <p>Hier stehen drei Kategorien zur Auswahl: Handschriften aus Gossembrots Bibliothek, Handschriften außerhalb Gossembrots Bibliothek und Drucke aus Gossembrots Bibliothek.</p>
   <p>Ein Auswahlmenü ermöglicht die Selektion der einzelnen rekonstruierten Textträger.</p>
   <p>Darunter befindet sich eine kurze kodikologische Beschreibung des Textträgers nach Gossembrots Angaben (Materialität, Benennung nach Gossembrot).</p>
   <p>Anschließend sind jene Verweise Gossembrots aufgeführt, die sich auf den Inhalt des rekonstruierten Textträgers beziehen. Beim Anklicken der einzelnen Verweistexte wird die jeweilige Handschriftenseite angezeigt, die den Verweis enthält. Nach Anklicken eines Verweises, stehen zudem die folgenden Optionen zur Verfügung: Detailansicht (Quelle, Verweistext, Ziel); Weiterleitung zur Verweis-Synopse; Öffnen der Beleg-Handschrift in einem neuen Tab.</p>
@@ -39,7 +39,7 @@
     <li><strong>arcus modus:</strong> Bezeichnet das Folio-Format. Beispiel: München, Bayerische Staatsbibliothek, Clm 17836, Format 26,8 x 20,7 cm, Benennung durch Gossembrot: ‚Albus codex spissus arcus modus in Didascalicon et aliis operibus‘ (nach München, Bayerische Staatsbibliothek, Clm 3559, Bl. 2r).</li>
     <li><strong>textus modus:</strong> Bezeichnet das Quart-Format. Beispiel: München, Bayerische Staatsbibliothek, Clm 27419, Format 21 x 14,5 cm, Benennung durch Gossembrot: ‚Liber albus spissus confessionalis textus modus‘ (nach München, Bayerische Staatsbibliothek, Clm 3941, Bl.14r).</li>
     <li><strong>modus regalis:</strong> Bezeichnet das großes Folio-Format.</li>
-    <li><strong>Karta:</strong> Gossembrot bezeichnet die Blätter in der Regel mit <span class="cite">karta</span>. Aus Verweisen auf erhaltenen Handschriften geht hervor, dass sich  <span class="cite">karta</span> dabei auf die aufgeschlagene Doppelseite und damit auch auf die vorausgehende verso-Seite bezieht. Beispiel: München, Bayerische Staatsbibliothek, Clm 3941, Bl. 44v:  <span class="cite">Eloq(uentia) q(uomodo) (com)p(ar)a(tur) nauigat(i)o(n)i (et) m(er)cancie vide | an(tea) a k(arta) .29. [Signum]</span>, zielt auf: München, Bayerische Staatsbibliothek, Clm 3941, Bl. 28v, wo das im Verweis genannte Signum zu finden ist.</li>
+    <li><strong>Karta:</strong> Gossembrot bezeichnet die Blätter in der Regel mit <span class="cite">karta</span>. Aus Verweisen auf erhaltenen Handschriften geht hervor, dass sich  <span class="cite">karta</span> dabei auf die aufgeschlagene Doppelseite und damit auch auf die vorausgehende verso-Seite bezieht. Beispiel: München, Bayerische Staatsbibliothek, Clm 3941, Bl. 44v:  <span class="cite">Eloq(uentia) q(uomodo) (com)p(ar)a(tur) nauigat(i)o(n)i (et) m(er)cancie vide | an(tea) a k(arta) .29.</span> [Signum], zielt auf: München, Bayerische Staatsbibliothek, Clm 3941, Bl. 28v, wo das im Verweis genannte Signum zu finden ist.</li>
   </ul>
 
   <!--
