--- a/src/app/view/pages/page-incoming-verweise/incoming-verweise-menu.component.html
+++ b/src/app/view/pages/page-incoming-verweise/incoming-verweise-menu.component.html
@@ -12,7 +12,7 @@
   </mat-tab>
   <mat-tab>
     <ng-template mat-tab-label>
-      <span class="primary-variant-tab">Handschriften ausserhalb Gossembrots Bibliothek</span>
+      <span class="primary-variant-tab">Handschriften außerhalb Gossembrots Bibliothek</span>
     </ng-template>
   </mat-tab>
   <mat-tab>
