--- a/src/app/view/pages/page-visualisations/network-graph/visualisation-data/vis-data-interaction/vis-global-filters/vis-global-filters.component.html
+++ b/src/app/view/pages/page-visualisations/network-graph/visualisation-data/vis-data-interaction/vis-global-filters/vis-global-filters.component.html
@@ -2,7 +2,7 @@
 <div class="vis-settings-panel">
     <mat-panel-title><span class="title">Bestand</span></mat-panel-title>
     <mat-checkbox [checked]="isLibrarySelected(true)" (change)="toggleLibraryPresence(true, $event.checked)">In Gossembrots Bibliothek</mat-checkbox>
-    <mat-checkbox [checked]="isLibrarySelected(false)" (change)="toggleLibraryPresence(false, $event.checked)">Ausserhalb von Gossembrots Bibliothek</mat-checkbox>
+    <mat-checkbox [checked]="isLibrarySelected(false)" (change)="toggleLibraryPresence(false, $event.checked)">Außerhalb von Gossembrots Bibliothek</mat-checkbox>
 </div>
 <mat-divider></mat-divider>
 <!-- Type -->
