--- a/src/app/view/pages/page-data-search/page-verweis-search/advanced-verweis-filter/advanced-verweis-filter.component.html
+++ b/src/app/view/pages/page-data-search/page-verweis-search/advanced-verweis-filter/advanced-verweis-filter.component.html
@@ -26,7 +26,7 @@
         <mat-card-content>
             <div>
                 <h3>Verweis-Typ</h3>
-                <app-is-nennung-filter/>
+                <app-is-erwaehnung-filter/>
             </div>
         </mat-card-content>
     </mat-card>
