--- a/src/app/view/pages/page-incoming-verweise/out-gsmb/out-gsmb.component.html
+++ b/src/app/view/pages/page-incoming-verweise/out-gsmb/out-gsmb.component.html
@@ -1,4 +1,4 @@
 <app-incoming-verweise
         [carriers]="(manuscriptsNotInGsmbLibrary$ | async) || []"
-        [label]="'Handschriften ausserhalb Gossembrots Bibliothek'"
+        [label]="'Handschriften außerhalb Gossembrots Bibliothek'"
 />
