--- a/src/app/view/pages/page-home/home.component.html
+++ b/src/app/view/pages/page-home/home.component.html
@@ -12,10 +12,10 @@
             </mat-card-subtitle>
         </div>
         <div class="snf-img-container" *ngIf="brightness === 'light'">
-            <img src="/gossembrot-db/assets/img/SNF_logo_standard_web_color_pos_d.png">
+            <img src="{{gsmbLogoLight}}">
         </div>
         <div class="snf-img-container" *ngIf="brightness === 'dark'">
-            <img src="/gossembrot-db/assets/img/SNF_logo_standard_web_color_neg_d.png">
+            <img src="{{gsmbLogoDark}}">
         </div>
     </div>
     <div class="bottom-container margin-bottom-end">
@@ -66,7 +66,7 @@
             </div>
             <div class="gsmb-img-container">
                 <div class="gsmb-img">
-                    <img src="/gossembrot-db/assets/img/Gossembrot_s.jpg" alt="Gossembrot" width="600">
+                    <img src="{{gsmbImage}}" alt="Gossembrot" width="600">
                 </div>
             </div>
         </div>
