--- a/src/app/view/pages/page-home/home.component.html
+++ b/src/app/view/pages/page-home/home.component.html
@@ -12,10 +12,10 @@
             </mat-card-subtitle>
         </div>
         <div class="snf-img-container" *ngIf="brightness === 'light'">
-            <img src="{{gsmbLogoLight}}">
+            <img alt="bright SNF Logo" src="{{snfLogoLight}}">
         </div>
         <div class="snf-img-container" *ngIf="brightness === 'dark'">
-            <img src="{{gsmbLogoDark}}">
+            <img alt="dark SNF Logo" src="{{snfLogoDark}}">
         </div>
     </div>
     <div class="bottom-container margin-bottom-end">
