--- a/src/app/view/pages/page-verweis-view/verweis-view.component.html
+++ b/src/app/view/pages/page-verweis-view/verweis-view.component.html
@@ -10,7 +10,7 @@
       <mat-icon>open_in_new</mat-icon>
     </button>
     <div class="toolbar-far-right-container">
-      <app-ui-close-button (close)="onClose()"/>
+      <app-ui-close-button (closeClicked)="onClose()"/>
     </div>
   </div>
 
