--- a/src/app/view/shared/tei-render-component/tei-render-component.component.html
+++ b/src/app/view/shared/tei-render-component/tei-render-component.component.html
@@ -1,12 +1,14 @@
 <span class="transcription"
       *ngIf="currentTooltip === ''"
       (mouseover)="updateTooltip($event)"
+      (focus)="updateTooltip($event)"
       [innerHTML]="htmlString"
 >
 </span>
 <span class="transcription"
       *ngIf="currentTooltip !== ''"
       (mouseover)="updateTooltip($event)"
+      (focus)="updateTooltip($event)"
       [innerHTML]="htmlString"
       [mtxTooltip]="tooltipTpl">
 </span>
