--- a/src/app/view/pages/page-data-search/page-verweis-search/verweis-search.component.html
+++ b/src/app/view/pages/page-data-search/page-verweis-search/verweis-search.component.html
@@ -85,6 +85,9 @@
                       <ng-container *ngIf="col.column === 'alternativePageId'">
                         {{ element.targetBelegstelleObj?.alternativePageId || ''}}
                       </ng-container>
+                        <ng-container *ngIf="col.column === 'missingComment'">
+                            {{ element.targetBelegstelleObj?.missingComment || ''}}
+                        </ng-container>
 
                         <!-- Default rendering for other columns -->
                         <ng-container
