--- a/src/app/view/shared/verweis-view-blatt-info/verweis-view-blatt-info.component.html
+++ b/src/app/view/shared/verweis-view-blatt-info/verweis-view-blatt-info.component.html
@@ -1,7 +1,8 @@
 <div class="verweis-view-blatt-info">
   <div class="carrier-info">
     <h3 class="carrier-title">
-        <div>{{carrierTitle}}</div>
+        <div *ngIf="agency === 'Src' || !!verweis?.targetBelegstelleObj">{{carrierTitle}}</div>
+        <div tabindex="0" (keydown.enter)="openCarrierInNewTab()" (click)="openCarrierInNewTab()" *ngIf="agency === 'Target' && !verweis?.targetBelegstelleObj" class="blattangabe">{{ carrierTitle }}</div>
         <div tabindex="0" (keydown.enter)="openCarrierInNewTab()" *ngIf="!isMissingPageOfExistingCarrier" (click)="openCarrierInNewTab()" class="blattangabe">{{blattangabe}}</div>
         <div *ngIf="isMissingPageOfExistingCarrier" [matTooltip]="missingTooltip">
           <span class="cursor-tooltip" [class.missing-blatt] ="!!alternativePageBlattangabe">{{blattangabe}}</span>
