--- a/src/app/view/shared/search-result-group/search-result-belegstelle/search-result-belegstelle.component.html
+++ b/src/app/view/shared/search-result-group/search-result-belegstelle/search-result-belegstelle.component.html
@@ -1,3 +1,3 @@
-<div *ngFor="let belegstelle of belegstellen;" class="suggestion-item" (click)="onVerweisClicked(belegstelle.verweis)">
+<div *ngFor="let belegstelle of belegstellen; trackBy: trackByIds" class="suggestion-item" (click)="onVerweisClicked(belegstelle.verweis)">
     <app-tei-render-component [teiXmlString]="belegstelle.belegstelle.label" [stringToHighlight]="termsToHighlight"/>
 </div>
