--- a/src/app/view/pages/page-data-search/page-data-search.component.scss
+++ b/src/app/view/pages/page-data-search/page-data-search.component.scss
@@ -83,3 +83,9 @@ tr:hover {
   margin-left: var(--margin-small);
   margin-right: var(--margin-small);
 }
+
+.smalller-icon {
+    font-size: 1em;
+  line-height: 1;
+  vertical-align: center;
+}
