--- a/src/app/view/pages/page-header/header-search/header-search.component.html
+++ b/src/app/view/pages/page-header/header-search/header-search.component.html
@@ -6,7 +6,7 @@
     <input
       #searchInput
       type="text"
-      placeholder="* Schnellsuche ..."
+      placeholder="Schnellsuche ..."
       (input)="doSearch(searchInput.value)"/>
   </div>
 
