--- a/src/app/view/shared/outgoing-verweise-per-manuscript/outgoing-verweise-list/outgoing-verweise-list.component.html
+++ b/src/app/view/shared/outgoing-verweise-per-manuscript/outgoing-verweise-list/outgoing-verweise-list.component.html
@@ -8,9 +8,9 @@
             <h4 *ngIf="t.outgoingVerweise.length > 0" class="src-text-title sticky-title">
                 <mat-icon class="text-icon">bookmark_outline</mat-icon>
 
-                <span *ngIf="t.author?.cognomen">
-                  <span *ngIf="!t.author?.linkToGnd">{{t.author?.cognomen}}: </span>
-                  <span *ngIf="t.author?.linkToGnd" matTooltip="Autor #{{t?.author?.gndId}} in der Deutschen Nationalbibliothek öffnen"><a class="author-link" [href]="t?.author?.linkToGnd || ''" target="_blank">{{t.author?.cognomen}}</a>: </span>
+                <span *ngIf="t.authorsCognomen">
+                  <span *ngIf="!t.author?.linkToGnd">{{t.authorsCognomen}}: </span>
+                  <span *ngIf="t.author?.linkToGnd" matTooltip="Autor #{{t?.author?.gndId}} in der Deutschen Nationalbibliothek öffnen"><a class="author-link" [href]="t?.author?.linkToGnd || ''" target="_blank">{{t.authorsCognomen}}</a>: </span>
                 </span>
                 <span>{{t.title}}</span>
                 <span *ngIf="t.title && t.incipit">
