--- a/src/app/view/pages/page-data-search/page-blatt-search/page-blatt-search.component.html
+++ b/src/app/view/pages/page-data-search/page-blatt-search/page-blatt-search.component.html
@@ -66,7 +66,7 @@
         showFirstLastButtons
         class="custom-paginator"
       ></mat-paginator>
-      <button mat-raised-button>Export</button>
+      <button mat-raised-button *ngIf="authService.isAuthenticated()">* Export</button>
     </div>
     <mat-drawer #advancedFilterDrawer mode="side" position="end" (openedChange)="onDrawerStateChange($event)">
       <button mat-raised-button class="close-button" color="primary" (click)="advancedFilterDrawer.close()">Schliessen</button>
