--- a/src/app/view/pages/page-incoming-verweise/incoming-verweise-menu.component.html
+++ b/src/app/view/pages/page-incoming-verweise/incoming-verweise-menu.component.html
@@ -20,9 +20,9 @@
       <span class="primary-variant-tab">Drucke aus Gossembrots Bibliothek</span>
     </ng-template>
   </mat-tab>
-  <mat-tab *ngIf="authService.isAuthenticated()">
+  <mat-tab>
     <ng-template mat-tab-label>
-      <span matTooltip="* Nur für interne Benutzer sichtbar" class="primary-variant-tab">* Für Gossembrot unzugängliche Textträger</span>
+      <span class="primary-variant-tab">Für Gossembrot unzugängliche Textträger</span>
     </ng-template>
   </mat-tab>
 </mat-tab-group>
